--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,49 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
-<ul>
-  <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
-  <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
-  <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
-</ul>
-<p>To help you get started, we've also set up:</p>
-<ul>
-  <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
-  <li><strong>Angular CLI integration</strong>. In development mode, there's no need to run <code>ng serve</code>. It runs in the background automatically, so your client-side resources are dynamically built on demand and the page refreshes when you modify any file.</li>
-  <li><strong>Efficient production builds</strong>. In production mode, development-time features are disabled, and your <code>dotnet publish</code> configuration automatically invokes <code>ng build</code> to produce minified, ahead-of-time compiled JavaScript files.</li>
-</ul>
-<p>The <code>ClientApp</code> subdirectory is a standard Angular CLI application. If you open a command prompt in that directory, you can run any <code>ng</code> command (e.g., <code>ng test</code>), or use <code>npm</code> to install extra packages into it.</p>
+<main>
+  <div class="intro">
+    <h1>Academia Nicu Dascalu</h1>
+    <p>Antreneaza-ti corpul si mintea impreuna cu noi .</p>
+    <button>Afla mai multe</button>
+  </div>
+  <div class="achievements">
+    <div class="work">
+      <i class="fas fa-atom"></i>
+      <p class="work-heading">Disciplina</p>
+      <p class="work-text">I have worked on many projects and I am very proud of them. I am a very good developer and I am always looking for new projects.</p>
+    </div>
+    <div class="work">
+      <i class="fas fa-skiing"></i>
+      <p class="work-heading">Determinare</p>
+      <p class="work-text">I have a lot of skills and I am very good at them. I am very good at programming and I am always looking for new skills.</p>
+    </div>
+    <div class="work">
+      <i class="fas fa-ethernet"></i>
+      <p class="work-heading">Perseverenta</p>
+      <p class="work-text">I have a lot of network skills and I am very good at them. I am very good at networking and I am always looking for new network skills.</p>
+    </div>
+  </div>
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>Nicu Dascalu</h2>
+      <p>
+        Pasiunea pentru acest sport a început in 2004, când am pășit pentru prima dată într-un DOJO iar de aici viața mea a luat o întorsătură radicală. Am devenit ceea ce nu credeam vreodată ca pot trăi, am învățat căci cu ambiția si determinarea necesară, poți răsturna munții.
+        Dea lungul timpului am acumulat multă experiență competițională luptând in gale de KickBox și MMA la nivel de SemiPro, iar in Ashihara Karate cu un palmares de peste 30 de medalii, multiplu campion național atât la kata cât si la kumite, medaliat cu bronz la campionatele mondiale si europene, și rezultatele vor continua sa apară fiind încă activ la competiții.
+        Dau cu plăcere toată învățătura și experiența, îmi place să îi motivez pe cei ce pășesc in arta sportului, încă din 2010 de când am început sa antrenez in cadrul Academiei  Nicu Dascălu
+        Campionii nu mor niciodată.
+      </p>
+    </div>
+    <img src="../../assets/images/nicu2.jpg" alt="me">
+  </div>
+
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>Iosif Pintican Dan</h2>
+      <p>
+        Adolescent fiind, am intrat pentru prima oara intr-un dojo de Ashihara Karate in toamna anului 1986. Antrenamentele conduse de cel care a adus acest stil in Romania, Sensei Carloganu Mircea, erau foarte severe, dar, cu toate acestea ma reintorceam in doja la fiecare antrenament din program. Experientele acumulate atunci, cand de multe ori pregatirea o faceam cu gandul de a nu fi descoperiti de catre organele de militie, deoarece in acea perioada sporturile de contact erau interzise, m-au intarit si m-au disciplinat astfel incat si astazi merg la dojo cu aceeasi pasiune.
+
+        Academiei de Arte Martiale Nicu Dascalu m-am alaturat in anul 2018, iar de atunci transmit mai departe pasiunea mea pentru acest stil atat ca instructr cat si ca arbitru.
+        Campionii nu mor niciodată.
+      </p>
+    </div>
+    <img src="../../assets/images/iosif.jpg" alt="me">
+  </div>
+</main>
