--- a/Kickbox/Kickbox/ClientApp/src/app/contactus/contactus.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/contactus/contactus.component.html
@@ -1,43 +1,29 @@
 <div class="container">
   <div style="text-align:center">
     <h2>Contact Us</h2>
-    <p>Swing by for a cup of coffee, or leave us a message:</p>
   </div>
   <div class="row">
     <div class="column">
-      <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
-      <link rel="stylesheet" type="text/css" href="./style.css" />
-      <script type="module" src="./index.js"></script>
-
-        <h3>My Google Maps Demo</h3>
-        <!--The div element for the map -->
-        <div id="map"></div>
-
-        <!--
-      The `defer` attribute causes the callback to execute after the full HTML
-      document has been parsed. For non-blocking uses, avoiding race conditions,
-      and consistent behavior across browsers, consider loading using Promises
-      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
-      -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-                defer></script>
+      <img src="../../assets/images/map2.png" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="australia">Australia</option>
-          <option value="canada">Canada</option>
-          <option value="usa">USA</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
+        <label for="fname">Adresa</label>
+        <p><b>Strada Henri Coandă 32, Brașov</b></p>
+        <label for="lname">Telefon</label>
+        <p><b>0712345678</b></p>
+        <label for="country">E-Mail</label>
+        <p><b>snicudascalu@yahoo.com</b></p>
+
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <br />
+        <br />
+        <!-- Add font awesome icons -->
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-youtube"></a>
+
       </form>
     </div>
   </div>
