small changes to home

--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -31,10 +31,11 @@
         Campionii nu mor niciodată.
       </p>
     </div>
-    <img src="../../assets/images/nicu2.jpg" alt="me">
+    <img src="../../assets/images/nicu2.jpg" alt="me" style="height: 400px; width: auto;">
   </div>
 
   <div class="about-me">
+    <img src="../../assets/images/iosif.jpg" alt="me" style="height: 500px; width: auto;">
     <div class="about-me-text">
       <h2>Iosif Pintican Dan</h2>
       <p>
@@ -44,6 +45,39 @@
         Campionii nu mor niciodată.
       </p>
     </div>
-    <img src="../../assets/images/iosif.jpg" alt="me">
+  </div>
+
+  <div class="row">
+    <div class="column">
+      <div class="card">
+        <p><i class="fa fa-user"></i></p>
+        <h3>11+</h3>
+        <p>Antrenori</p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <p><i class="fa fa-check"></i></p>
+        <h3>55+</h3>
+        <p>Sportivi</p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <p><i class="fa fa-smile-o"></i></p>
+        <h3>100+</h3>
+        <p>Premii</p>
+      </div>
+    </div>
+
+    <div class="column">
+      <div class="card">
+        <p><i class="fa fa-coffee"></i></p>
+        <h3>100+</h3>
+        <p>Meetings</p>
+      </div>
+    </div>
   </div>
 </main>
