--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.css
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.css
@@ -93,7 +93,7 @@ body {
     .achievements .work i {
       width: fit-content;
       font-size: 50px;
-      color: #333333;
+      color: rgb(210,210,210);
       border-radius: 50%;
       border: 2px solid #333333;
       padding: 12px;
@@ -101,44 +101,49 @@ body {
 
     .achievements .work .work-heading {
       font-size: 20px;
-      color: #333333;
+      color: rgb(210,210,210);
       text-transform: uppercase;
       margin: 10px 0;
     }
 
     .achievements .work .work-text {
       font-size: 15px;
-      color: #585858;
+      color: rgb(210,210,210);
       margin: 10px 0;
     }
 
 .about-me {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  padding: 40px 80px;
+  padding: 40px 40px;
   border-top: 2px solid #eeeeee;
 }
 
   .about-me img {
-    width: 500px;
-    max-width: 100%;
-    height: auto;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
+    margin: 50px;
+    border: 5px solid #ffffff;
   }
 
-.about-me-text h2 {
-  font-size: 30px;
-  color: #333333;
-  text-transform: uppercase;
-  margin: 0;
+.about-me-text {
+  padding: 20px;
 }
 
-.about-me-text p {
-  font-size: 15px;
-  color: #585858;
-  margin: 10px 0;
-}
+  .about-me-text h2 {
+    font-size: 30px;
+    color: rgb(210,210,210);
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  .about-me-text p {
+    font-size: 15px;
+    color: rgb(210,210,210);
+    margin: 10px 0;
+    text-align: justify;
+  }
 /* CSS for footer */
 .footer {
   display: flex;
@@ -179,3 +184,47 @@ body {
       color: #a1a1a1;
       padding: 10px 20px;
     }
+
+.* {
+  box-sizing: border-box;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 5px;
+}
+
+.row {
+  margin: 0 -5px;
+}
+
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #444;
+  color: white;
+}
+
+.fa {
+  font-size: 50px;
+}
