--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.css
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.css
@@ -64,8 +64,7 @@ body {
   }
 
   .intro button {
-    background-color: #5edaf0;
-    color: #000;
+    background-color: white;
     padding: 10px 25px;
     border: none;
     border-radius: 5px;
