--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -6,17 +6,17 @@
   </div>
   <div class="achievements">
     <div class="work">
-      <i class="fas fa-atom"></i>
+      <i class="fa-solid fa-yin-yang"></i>
       <p class="work-heading">Disciplina</p>
       <p class="work-text">I have worked on many projects and I am very proud of them. I am a very good developer and I am always looking for new projects.</p>
     </div>
     <div class="work">
-      <i class="fas fa-skiing"></i>
+      <i class="fa-solid fa-brain"></i>
       <p class="work-heading">Determinare</p>
       <p class="work-text">I have a lot of skills and I am very good at them. I am very good at programming and I am always looking for new skills.</p>
     </div>
     <div class="work">
-      <i class="fas fa-ethernet"></i>
+      <i class="fa-solid fa-person-hiking"></i>
       <p class="work-heading">Perseverenta</p>
       <p class="work-text">I have a lot of network skills and I am very good at them. I am very good at networking and I am always looking for new network skills.</p>
     </div>
