--- a/Kickbox/Kickbox/ClientApp/src/app/counter/counter.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/counter/counter.component.html
@@ -1,7 +1,38 @@
-<h1>Counter</h1>
+<h1 style="color: white; font-size: 48px; text-align:center; margin-bottom:30px">Orar</h1>
 
-<p>This is a simple example of an Angular component.</p>
+<div class="about-me">
+  <div class="about-me-text">
+    <h1 style="color:white">Ashihara Karate copii</h1>
 
-<p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
+    <ul style="color: white; font-size: x-large">
+      <li>Luni - 19:00</li>
+      <li>Miercuri - 19:00</li>
+      <li>Vineri - 19:00</li>
+    </ul>
+  </div>
+  <img src="../../assets/images/karatecopii.jpg" alt="me" style="auto; width: 400px;">
+</div>
 
-<button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
+<div class="about-me">
+  <div class="about-me-text">
+    <h1 style="color:white">Ashihara Karate Adulti</h1>
+    <ul style="color:white; font-size:x-large">
+      <li>Luni - 21:00</li>
+      <li>Miercuri - 21:00</li>
+      <li>Vineri - 21:00</li>
+    </ul>
+  </div>
+  <img src="../../assets/images/karateadulti.jpg" alt="me" style="height: auto; width: 400px;">
+</div>
+
+<div class="about-me">
+  <div class="about-me-text">
+    <h1 style="color:white">Kickbox copii si adulti </h1>
+    <ul style="color: white; font-size: x-large">
+      <li>Luni - 21:00</li>
+      <li>Miercuri - 21:00</li>
+      <li>Vineri - 21:00</li>
+    </ul>
+  </div>
+  <img src="../../assets/images/kickboxteam.jpg" alt="me" style="auto; width: 400px;;">
+</div>
