--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -74,10 +74,13 @@
 
     <div class="column">
       <div class="card">
-        <p><i class="fa fa-coffee"></i></p>
-        <h3>100+</h3>
-        <p>Meetings</p>
+        <p><i class="fa fa-trophy"></i></p>
+        <h3>10+</h3>
+        <p>Campionate</p>
       </div>
     </div>
   </div>
+  <br />
+  <br />
+  <br />
 </main>
