--- a/Kickbox/Kickbox/ClientApp/src/app/contactus/contactus.component.css
+++ b/Kickbox/Kickbox/ClientApp/src/app/contactus/contactus.component.css
@@ -29,6 +29,8 @@ input[type=submit] {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 10px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 /* Create two columns that float next to eachother */
