Added gallery page. Renamed CounterComponent to ScheduleComponent.

--- a/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,7 +20,10 @@
           <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['link-active']">
-          <a class="nav-link text-dark" [routerLink]="['/info']">Info</a>
+          <a class="nav-link text-dark" [routerLink]="['/orar']">Orar</a>
+        </li>
+        <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-dark" [routerLink]="['/galerie']">Galerie</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['link-active']">
           <a class="nav-link text-dark" [routerLink]="['/contact']">Contact</a>
