small changes (add more trainers)

--- a/Kickbox/Kickbox/ClientApp/src/app/gallery/gallery.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/gallery/gallery.component.html
@@ -39,6 +39,14 @@
     <img src="../../assets/images/nicu.jpg" alt="Image 1">
     <img src="../../assets/images/home3.jpg" alt="Image 1">
     <img src="../../assets/images/img1.jpg" alt="Image 1">
+    <img src="../../assets/images/home1.jpg" alt="Image 1">
+    <img src="../../assets/images/home2.jpg" alt="Image 1">
+    <img src="../../assets/images/kickboxteam.jpg" alt="Image 1">
+    <img src="../../assets/images/karateadulti.jpg" alt="Image 1">
+    <img src="../../assets/images/karatecopii.jpg" alt="Image 1">
+    <img src="../../assets/images/nicu.jpg" alt="Image 1">
+    <img src="../../assets/images/home3.jpg" alt="Image 1">
+    <img src="../../assets/images/img1.jpg" alt="Image 1">
   </div>
 </body>
 </html>
