--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -35,7 +35,50 @@
   </div>
 
   <div class="about-me">
-    <img src="../../assets/images/iosif.jpg" alt="me" style="height: 500px; width: auto;">
+    <img src="../../assets/images/tuicu.jpg" alt="me" style="height: 400px; width: auto;">
+    <div class="about-me-text">
+      <h2>Tuicu Florin Madalin</h2>
+      <p>
+        În anul 1995 la  o vârstă fragedă am intrat pentru prima oară intr-un dojo de Ashihara Karate sub îndrumarea instructorului sempai Adi Pop.
+        În anul 2001 am început antrenamentele sub îndrumarea lui Shihan Nicu Dascălu în cadru academiei de arte marțiale Nicu Dascălu.
+        Cu o experiență acumulată ca instructor sportiv din anul 1998.
+        am obținut mai multe rezultate în cadrul competiților naționale și intercluburi .
+
+      </p>
+    </div>
+  </div>
+
+
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>Alex Cojocariu</h2>
+      <p>
+        Sunt instructor în cadrul Academiei de Arte Marțiale Nicu Dascălu începând cu anul 2016. Practic Ashihara Karate din februarie 2004  având gradul de 2 DAN.
+        În palmares am 7 titluri la Campionatele Mondiale , patru dintre ele fiind la seniori (Kata și Kumite), multiplu campion național. Titlul de maestru emerit al sportului, totodată urmez școala de formare și perfecționare a antrenorilor.
+        Motoul meu este : „ Un campion este acel sportiv care a refuzat să renunțe.”
+      </p>
+    </div>
+    <img src="../../assets/images/cojacariu.jpg" alt="me" style="height: 400px; width: auto;">
+  </div>
+
+
+  <div class="about-me">
+    <img src="../../assets/images/horatiu.jpg" alt="me" style="height: 500px; width: auto;">
+    <div class="about-me-text">
+      <h2>Horatiu Sasu</h2>
+      <p>
+        Primul contact cu Ashihara Karate l-am avut în perioada adolescenței, în cursul anului 1997. Pot spune primele antrenamente mi-au stârnit pasiunea pentru această cale, pe care acum la rândul meu încerc să o transmit mai departe elevilor din cadrul Academiei de Arte Marțiale Nicu Dascălu. De-a lungul timpului am acumulat experiențe atât ca practicant, arbitru și instructor sportiv.
+
+        După mai multe căutări, în cursul anului 2017 m-am Academiei inițial ca practicant și ulterior ca instructor în cadrul sălii deschise în comuna Hălchiu, județul Brașov.
+
+        Abnegația, seriozitatea, pasiunea sunt calități pe care doresc să le transmit mai departe elevilor din cadrul Academiei.
+
+      </p>
+    </div>
+  </div>
+
+
+  <div class="about-me">
     <div class="about-me-text">
       <h2>Iosif Pintican Dan</h2>
       <p>
@@ -45,6 +88,36 @@
         Campionii nu mor niciodată.
       </p>
     </div>
+    <img src="../../assets/images/iosif.jpg" alt="me" style="height: 400px; width: auto;">
+  </div>
+
+  <div class="about-me">
+    <img src="../../assets/images/remus.jpg" alt="me" style="height: 500px; width: auto;">
+    <div class="about-me-text">
+      <h2>Remus Neagu</h2>
+      <p>
+        Primul contact cu Ashihara Karate l-am avut în perioada adolescenței, în cursul anului 1997. Pot spune primele antrenamente mi-au stârnit pasiunea pentru această cale, pe care acum la rândul meu încerc să o transmit mai departe elevilor din cadrul Academiei de Arte Marțiale Nicu Dascălu. De-a lungul timpului am acumulat experiențe atât ca practicant, arbitru și instructor sportiv.
+
+        După mai multe căutări, în cursul anului 2017 m-am Academiei inițial ca practicant și ulterior ca instructor în cadrul sălii deschise în comuna Hălchiu, județul Brașov.
+
+        Abnegația, seriozitatea, pasiunea sunt calități pe care doresc să le transmit mai departe elevilor din cadrul Academiei.
+
+      </p>
+    </div>
+  </div>
+
+
+  <div class="about-me">
+    <div class="about-me-text">
+      <h2>Adrian Lupu</h2>
+      <p>
+        Adolescent fiind, am intrat pentru prima oara intr-un dojo de Ashihara Karate in toamna anului 1986. Antrenamentele conduse de cel care a adus acest stil in Romania, Sensei Carloganu Mircea, erau foarte severe, dar, cu toate acestea ma reintorceam in doja la fiecare antrenament din program. Experientele acumulate atunci, cand de multe ori pregatirea o faceam cu gandul de a nu fi descoperiti de catre organele de militie, deoarece in acea perioada sporturile de contact erau interzise, m-au intarit si m-au disciplinat astfel incat si astazi merg la dojo cu aceeasi pasiune.
+
+        Academiei de Arte Martiale Nicu Dascalu m-am alaturat in anul 2018, iar de atunci transmit mai departe pasiunea mea pentru acest stil atat ca instructr cat si ca arbitru.
+        Campionii nu mor niciodată.
+      </p>
+    </div>
+    <img src="../../assets/images/adilupu.jpg" alt="me" style="height: 400px; width: auto;">
   </div>
 
   <div class="row">
