--- a/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/home/home.component.html
@@ -92,7 +92,7 @@
   </div>
 
   <div class="about-me">
-    <img src="../../assets/images/remus.jpg" alt="me" style="height: 500px; width: auto;">
+    <img src="../../assets/images/remus2.jpg" alt="me" style="height: 500px; width: auto;">
     <div class="about-me-text">
       <h2>Remus Neagu</h2>
       <p>
