added competition page

--- a/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,6 +23,9 @@
           <a class="nav-link text-dark" [routerLink]="['/orar']">Orar</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-dark" [routerLink]="['/competitii']">Competitii</a>
+        </li>
+        <li class="nav-item" [routerLinkActive]="['link-active']">
           <a class="nav-link text-dark" [routerLink]="['/galerie']">Galerie</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['link-active']">
