--- a/Kickbox/Kickbox/ClientApp/src/app/competition/competition.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/competition/competition.component.html
@@ -1,1 +1,77 @@
-<p>competition works!</p>
+
+
+
+<h1 style="text-align:center; color:white"> Campionatul National 2023 Brasov</h1>
+<br />
+
+<div class="Row">
+  <div class="Column">
+    <div class="card" style="align-items:center; margin-top:30px">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>Nume Prenume</b></h4>
+        <p>Kumite: Locul 1</p>
+      </div>
+    </div>
+  </div>
+  <div class="Column">
+    <div class="card" style="align-items:center">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+  </div>
+  <div class="Column">
+    <div class="card" style="align-items:center">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br />
+<br />
+<div class="Row">
+  <div class="Column">
+    <div class="card" style="align-items:center; margin-top:30px">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+  </div>
+  <div class="Column">
+    <div class="card" style="align-items:center">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+  </div>
+  <div class="Column">
+    <div class="card" style="align-items:center">
+      <img src="../../assets/images/copil1.jpg" alt="Avatar" style="width:300px">
+      <div class="container" style="text-align:center">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br />
+<br />
+
+
+
+
+
+
+
