--- a/Kickbox/Kickbox/ClientApp/src/styles.css
+++ b/Kickbox/Kickbox/ClientApp/src/styles.css
@@ -3,7 +3,7 @@
 /* Provide sufficient contrast against white background */
 
 body {
-  background-color: rgb(51, 51, 51) !important;
+  background-color: #181818 !important;
 }
 
 a {
