Added About Us page.

--- a/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Kickbox/Kickbox/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -29,6 +29,9 @@
           <a class="nav-link text-dark" [routerLink]="['/galerie']">Galerie</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['link-active']">
+          <a class="nav-link text-dark" [routerLink]="['/despre-noi']">Despre noi</a>
+        </li>
+        <li class="nav-item" [routerLinkActive]="['link-active']">
           <a class="nav-link text-dark" [routerLink]="['/contact']">Contact</a>
         </li>
       </ul>
